--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-<title>ST Eletricas </title>
+<title>ST Elétricas </title>
 </head>
 <body style="background-color:rgb(176, 230, 201);" >
-  <h1 style="text-align:center;"> Bem-vido(a) a ST Eletricas, aqui você encontra tudo! </h1>
+<br/> <br/>
+<h1 style="text-align:center;"> Bem-vido(a) a ST Elétricas, aqui você encontra tudo que precisa! </h1>
+<p> Aqui na ST você pode encontrar tudo o que precisa para a sua instalação elétricas,<i>de A à I, você encontra tudo por aqui </i>  </p>
 </body>
 </html>
