--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <head>
 <title>ST Elétricas </title>
 </head>
-<body style="background-color:rgb(176, 230, 201);" >
+<body style="background-color:rgb(230, 189, 176);" >
 <br/> <br/>
 <h1 style="text-align:center;"> Bem-vido(a) a ST Elétricas, aqui você encontra tudo que precisa! </h1>
-<p> Aqui na ST você pode encontrar tudo o que precisa para a sua instalação elétricas,<i>de A à I, você encontra tudo por aqui </i>  </p>
+<hr>
+<h2 style="text-align:center;"> Aqui na ST você pode encontrar tudo o que precisa para a sua instalação elétricas,<i>de A à I, você encontra tudo por aqui </i>  </h2>
+<hr>
 </body>
 </html>
