--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <br/> <br/>
 <h1 style="text-align:center;"> Bem-vido(a) a ST Elétricas, aqui você encontra tudo que precisa! </h1>
 <hr>
-<h2 style="text-align:center;"> Aqui na ST você pode encontrar tudo o que precisa para a sua instalação elétrica, <i>de A à I, você encontra tudo por aqui! </i>  </h2>
+<h2 style="text-align:center;"> Aqui na ST você pode encontrar tudo o que precisa para a sua instalação elétrica, <i>de S a T, a gente faz tudo por você! </i>  </h2>
 <hr>
 </body>
 </html>
