--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <br/> <br/>
 <h1 style="text-align:center;"> Bem-vido(a) a ST Elétricas, aqui você encontra tudo que precisa! </h1>
 <hr>
-<h2 style="text-align:center;"> Aqui na ST você pode encontrar tudo o que precisa para a sua instalação elétrica, <i>de S a T, a gente faz tudo por você! </i>  </h2>
+<h2 style="text-align:center;"> Aqui na ST você pode encontrar tudo o que precisa para a sua instalação elétrica. <i>De S a T, a gente faz tudo por você! </i>  </h2>
 <hr>
+<img src="https://www.glight.com.br/uploads/produtos/a60lamp-07-01-2020_144454.jpg" alt="Foto de uma lâmpada LED" width="300" height="300">
+<p><cite>Lâmpada LED na promoção, venha já adiquiri a sua! </cite></p>
+<img src ="https://www.souzaeletrica.com.br/1426-large_default/conjunto-1-interrup-simples-1-tomada-10a-mec-tronic-petra.jpg" alt="Interruptor conjugado com uma tomada" width="300" height="300">
+<p><cite>Interruptor conjugado com uma tomada com 10% de desconto, venha e compre a sua! </cite></p>
 </body>
 </html>
