--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>ST Elétricas </title>
 </head>
-<body style="background-color:LightGray;"></body>" >
+<body style="background-color:MediumSeaGreen;"></body>" >
 <br/> <br/>
 <h1 style="text-align:center;"> Bem-vindo(a) a ST Elétricas, aqui você encontra tudo que precisa! </h1>
 <hr>
