--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body style="background-color:MediumSeaGreen;"></body>" >
 <br/> <br/>
-<h1 style="text-align:center;"> Bem-vindo(a) a ST Elétricas, aqui você encontra tudo que precisa! </h1>
+<h1 style="text-align:center;">° Bem-vindo(a) a ST Elétricas, aqui você encontra tudo que precisa! </h1>
 <hr>
 <h2 style="text-align:center;"> Aqui na ST você pode encontrar tudo o que precisa para a sua instalação elétrica. <i>De S a T, a gente faz tudo por você! </i>  </h2>
 <hr>
